// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcAmountInput should render properly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    class="ec-input-field__input ec-input-field__input--has-no-spinners"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcAmountInput should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    class="ec-input-field__input my-sensitive-content-test-class ec-input-field__input--has-no-spinners"
    data-test="ec-amount-input ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;
